--- a/.github/workflows/multi-arch_images_build.yml
+++ b/.github/workflows/multi-arch_images_build.yml
@@ -7,7 +7,7 @@ env:
   IMAGE_NAME: multiarch-image-demo
   IMAGE_TAG: latest
   IMAGE_REGISTRY: quay.io
-  IMAGE_NAMESPACE: raja0940
+  IMAGE_NAMESPACE: smita_shinde
 
 jobs:
   build:
